@@ -1,21 +1,31 @@
 package com.salapp.sb.ats.apigateway.config;
 
+import io.jsonwebtoken.Jwt;
 import io.jsonwebtoken.security.Keys;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.convert.converter.Converter;
+import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.NimbusReactiveJwtDecoder;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
 import org.springframework.security.oauth2.jwt.ReactiveJwtDecoder;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+import org.springframework.security.oauth2.server.resource.authentication.ReactiveJwtAuthenticationConverterAdapter;
 import org.springframework.security.web.server.SecurityWebFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
+import reactor.core.publisher.Mono;
 
 import javax.crypto.SecretKey;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 
 @Slf4j
 @Configuration
@@ -31,11 +41,16 @@ public class SecurityConfig {
                 .csrf(ServerHttpSecurity.CsrfSpec::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Enable CORS
                 .authorizeExchange(exchange -> exchange
-                        .pathMatchers("/auth/login", "/users/register", "/auth/signup", "/auth/verify-2fa", "/users/activate", "/users/*/activated").permitAll()
-                        .anyExchange().authenticated()
+                        .pathMatchers("/auth/login", "/users/register", "/actuator/**", "/auth/signup", "/auth/verify-2fa", "/users/activate", "/users/*/activated", "/uploads/**").permitAll()
+                        .pathMatchers("users/profile/**").authenticated()
+                        .pathMatchers("/users/profile-picture/**").authenticated()
+                        .pathMatchers("/auth/userinfo")
+                        .authenticated()
                 )
                 .oauth2ResourceServer(oauth2 -> oauth2
-                        .jwt(jwt -> jwt.jwtDecoder(jwtDecoder()))
+                        .jwt(jwt ->
+                                jwt.jwtDecoder(jwtDecoder())
+                                        .jwtAuthenticationConverter(jwtAuthenticationConverter()))
                 )
                 .build();
     }
@@ -49,14 +64,41 @@ public class SecurityConfig {
         }
         SecretKey key = Keys.hmacShaKeyFor(keyBytes);
         return NimbusReactiveJwtDecoder.withSecretKey(key).build();
+    }
 
-        //return NimbusReactiveJwtDecoder.withJwkSetUri("http://localhost:8081/.well-known/jwks.json").build();
+    @Bean
+    public Converter<org.springframework.security.oauth2.jwt.Jwt, Mono<AbstractAuthenticationToken>> jwtAuthenticationConverter() {
+        JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
+        converter.setJwtGrantedAuthoritiesConverter(jwt -> {
+            // Extract roles from the "roles" claim
+            List<String> roles = jwt.getClaimAsStringList("roles");
+            if (roles == null) {
+                roles = Collections.emptyList();
+            }
+
+            // Extract authorities (permissions) from the "authorities" claim
+            List<String> authorities = jwt.getClaimAsStringList("authorities");
+            if (authorities == null) {
+                authorities = Collections.emptyList();
+            }
+
+            // Combine roles and authorities into Spring Security authorities
+            List<GrantedAuthority> grantedAuthorities = new ArrayList<>();
+            grantedAuthorities.addAll(roles.stream().map(SimpleGrantedAuthority::new).toList());
+            grantedAuthorities.addAll(authorities.stream().map(SimpleGrantedAuthority::new).toList());
+
+            log.debug("Extracted roles: {}, authorities: {}", roles, authorities);
+            return grantedAuthorities;
+        });
+
+        // Adapt to reactive Mono return type
+        return new ReactiveJwtAuthenticationConverterAdapter(converter);
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Collections.singletonList("http://localhost:5173")); // Your frontend origin
+        config.setAllowedOrigins(List.of("http://localhost:5173", "https://localhost:5173")); // Your frontend origin
         config.setAllowedMethods(Collections.singletonList("*")); // Allow all methods (GET, POST, etc.)
         config.setAllowedHeaders(Collections.singletonList("*")); // Allow all headers
         config.setAllowCredentials(true); // If you need cookies/auth headers
